# lem-in-visual

./: CMakeLists.txt  Makefile  README.md  ant_moves.c  author  bfs.c  bresenhem.c  control.c  creat_image.c  double_split.c  find_way.c  free_all.c  lem-in  lem_in.h  lem_visual.h  lib_connect.c  lib_room.c  loop_key_hook.c  main.c  mouse_press.c  new_map  parse.c  parse_link.c  parse_rooms.c  print_result.c  render.c  render_menu.c  term_map_10_10_10_90_90_3_z  test  transform.c  utils.c  valid_links.c  valid_rooms.c  valid_rooms2.c
convert_fdf_to_lemin/: _convert_res_noz_to_z.py  convert_fdf_to_lemin.py  remake_fdf_map.py
maps/: 100-6_20_10_10_90_90_5_no_z  100-6_20_10_10_90_90_5_z  42_100_3_3_8_16_5_no_z  42_100_3_3_8_16_5_z  42_10_3_16_7_3_3_no_z  42_10_3_16_7_3_3_z  50-4_100_7_7_42_42_4_no_z  50-4_100_7_7_42_42_4_z  50-4_20_7_7_43_43_0_z  50-4_20_7_7_43_43_5_no_z  50-4_20_7_7_43_43_5_z  mars_100_15_20_100_180_4_no_z  mars_100_15_20_100_180_4_z  mars_10_16_20_100_180_3_no_z  mars_10_16_20_100_180_3_z  pylone_100_10_10_37_38_5_no_z  pylone_100_10_10_37_38_5_z  pyramide_100_10_10_24_17_4_no_z  pyramide_100_10_10_24_17_4_z  pyramide_100_10_10_24_17_5_no_z  pyramide_100_10_10_24_17_5_z  pyramide_100_6_6_21_21_5_no_z  pyramide_100_6_6_21_21_5_z  pyramide_100_6_6_22_22_2_no_z  pyramide_100_6_6_22_22_2_z  pyramide_100_6_6_22_22_3_no_z  pyramide_100_6_6_22_22_3_z  pyramide_100_6_6_22_22_4_no_z  pyramide_100_6_6_22_22_4_z  pyramide_100_9_9_18_27_5_no_z  pyramide_100_9_9_18_27_5_z  term_map.fdf  term_map_100_10_10_90_90_5_no_z  term_map_100_10_10_90_90_5_z  (+9 more)
